fixed footer position, text overflow needs fixing, dropdown needs animation

--- a/styles/_landing.scss
+++ b/styles/_landing.scss
@@ -9,7 +9,7 @@ html {
 .grid-container {
     display:grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 0fr 1fr 1fr 0.4fr;
+    grid-template-rows: 0fr 1fr 1fr 0.5fr;
     grid-template-areas: 
     "header header header"
     "hero hero hero"
@@ -33,6 +33,8 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+
+    padding: 1em;
    
     display: flex;
     justify-content: center;
@@ -88,6 +90,7 @@ html {
       background-color: #ffff;
       padding: 2em;
       height: 100vh;
+      overflow: hidden;
 
       h1{
         font-size: 50px;
@@ -107,6 +110,7 @@ html {
   }
 
   footer {
+      height: 5vh;
       grid-area: footer;
       justify-content: center;
       color: rgb(209, 194, 194);
